# chatgpt-to-claude

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
site/: index.html  style.css
site/js/: app.js  content-handlers.js  extractor.js  markdown-writer.js  organizer.js  parser.js  splitter.js  statistics.js
site/js/byok/: api-client.js  llm-synthesizer.js
site/js/synthesis/: knowledge-summarizer.js  memory-converter.js  profile-builder.js  topic-clusterer.js
site/js/workers/: parse-worker.js
src/chatgpt_to_claude/: __init__.py
src/chatgpt_to_claude/cli/: app.py  display.py
src/chatgpt_to_claude/core/: content_handlers.py  extractor.py  markdown_writer.py  models.py  organizer.py  parser.py  splitter.py  statistics.py
src/chatgpt_to_claude/web/: app.py  processing.py  routes.py
src/chatgpt_to_claude/web/static/css/: style.css
src/chatgpt_to_claude/web/static/js/: app.js
src/chatgpt_to_claude/web/templates/: base.html  index.html
tests/: conftest.py  test_markdown_writer.py  test_parser.py
